noticed background image was not filling page, attempting bug fix which is not visible in prod

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,7 @@
 
 body {
   background-image: url("/images/background.jpg");
+  background-size: cover;
   color: #220749;
   font-weight: 600;
   font-size: 1rem; /* 16px */
